[JAVA-39213] Moved Serenity articles  from libraries-testing to libraries-testing-2